# stylegan

./: .gitignore  README.md  meta.yaml  requirements-linux64.txt  requirements-macos.txt  setup.cfg
creative_ai/models/: style_transfer.py
src/Pix2Pix/: Imports.py
src/StyleTransfer/: Imports.py  StyleTransfer-PL.py  Style_Transfer.py
tospax/: utils.py
tospax/models/: cycleg_pl.py  style_transfer.py
tospax/tests/: test_style_transfer.py
