[metadata]
name = creative-ai
version = 0.0.1
author = ben levine
author_email = ben.h.levine@gmail.com
url = https://github.com/benprofessionaledition/stylegan
description = "ben's stylegan repo"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any

[options]
include_package_data = true
python_requires = >= 3.7
packages = tospax
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

